--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCUMENT html>
 <html ng-app="store">
-    <head>
-        <link rel="stylesheet" type="text/css" href="libs/bootstrap-3.3.2-dist/css/bootstrap.min.css" />
-    </head>
-    <body>
-        <div ng-controller="StoreController as store">
-            <h1> {{ store.product.name}}</h1>
-            <h2> ${{ store.product.price}}</h2>
-            <p> {{ store.product.description}}</p>
+<head>
+    <link rel="stylesheet" type="text/css" href="libs/bootstrap-3.3.2-dist/css/bootstrap.min.css"/>
+</head>
+<body>
+<div ng-controller="StoreController as store">
+    <div ng-repeat="product in store.products">
+        <h1> {{ product.name}}</h1>
 
-        </div>
-        <script type="text/javascript" src="libs/angular.js"></script>
-        <script type="text/javascript" src="app.js"></script>
-        <p>{{"hello"+" you"}}</p>
-    </body>
+        <h2> ${{ product.price}}</h2>
+
+        <p> {{ product.description}}</p>
+        <button ng-show="product.canPurchase">Add to cart</button>
+    </div>
+</div>
+<script type="text/javascript" src="libs/angular.js"></script>
+<script type="text/javascript" src="app.js"></script>
+<p>{{"hello"+" you"}}</p>
+</body>
 </html>
